# unimrcp

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  INSTALL  Makefile.am  README  acinclude.m4  config.layout  configure.ac  unimrcp-2010.sln  unimrcp.sln
conf/: Makefile.am  config.json  logger.xml  umcscenarios.xml  unimrcpclient.xml  unimrcpclient.xsd  unimrcpserver.xml  unimrcpserver.xsd
conf/client-profiles/: lumenvox.xml  nuance.xml  unimrcp.xml
conf/umc-scenarios/: dtmfrecognizer.xml  recognizer.xml  recorder.xml  synthesizer.xml  verifier.xml
data/: Makefile.am  pt-br-female-8KHz.raw  pt-br-male-8KHz.raw  speak.xml
libs/apr-toolkit/: Makefile.am  aprtoolkit.vcproj  aprtoolkit.vcxproj  aprtoolkit.vcxproj.filters
libs/apr-toolkit/include/: apt.h  apt_composite_task.h  apt_consumer_task.h  apt_cyclic_queue.h  apt_dir_layout.h  apt_header_field.h  apt_log.h  apt_multipart_content.h  apt_net.h  apt_net_client_task.h  apt_net_server_task.h  apt_nlsml_doc.h  apt_obj_list.h  apt_pair.h  apt_poller_task.h  apt_pollset.h  apt_pool.h  apt_string.h  apt_string_table.h  apt_task.h  apt_task_msg.h  apt_test_suite.h  apt_text_message.h  apt_text_stream.h  apt_timer_queue.h
libs/apr-toolkit/src/: apt_composite_task.c  apt_consumer_task.c  apt_cyclic_queue.c  apt_dir_layout.c  apt_header_field.c  apt_log.c  apt_multipart_content.c  apt_net.c  apt_net_client_task.c  apt_net_server_task.c  apt_nlsml_doc.c  apt_obj_list.c  apt_pair.c  apt_poller_task.c  apt_pollset.c  apt_pool.c  apt_string_table.c  apt_task.c  apt_task_msg.c  apt_test_suite.c  apt_text_message.c  apt_text_stream.c  apt_timer_queue.c
libs/mpf/: CMakeLists.txt  Makefile.am  mpf.vcproj  mpf.vcxproj  mpf.vcxproj.filters
libs/mpf/codecs/g711/: g711.h
libs/mpf/include/: mpf.h  mpf_activity_detector.h  mpf_audio_file_descriptor.h  mpf_audio_file_stream.h  mpf_bridge.h  mpf_buffer.h  mpf_codec.h  mpf_codec_descriptor.h  mpf_codec_manager.h  mpf_context.h  mpf_decoder.h  mpf_dtmf_detector.h  mpf_dtmf_generator.h  mpf_encoder.h  mpf_engine.h  mpf_engine_factory.h  mpf_file_termination_factory.h  mpf_frame.h  mpf_frame_buffer.h  mpf_jitter_buffer.h  mpf_media_descriptor.h  mpf_message.h  mpf_mixer.h  mpf_multiplier.h  mpf_named_event.h  mpf_object.h  mpf_resampler.h  mpf_rtcp_header.h  mpf_rtcp_packet.h  mpf_rtcp_scheduler.h  mpf_rtp_attribs.h  mpf_rtp_defs.h  mpf_rtp_descriptor.h  mpf_rtp_header.h  mpf_rtp_pt.h  mpf_rtp_stat.h  mpf_rtp_stream.h  mpf_rtp_stream_descriptor.h  mpf_rtp_termination_factory.h  mpf_scheduler.h  (+10 more)
libs/mpf/src/: mpf_activity_detector.c  mpf_audio_file_stream.c  mpf_bridge.c  mpf_buffer.c  mpf_codec_amr.c  mpf_codec_descriptor.c  mpf_codec_g711.c  mpf_codec_g722.c  mpf_codec_linear.c  mpf_codec_manager.c  mpf_context.c  mpf_decoder.c  mpf_dtmf_detector.c  mpf_dtmf_generator.c  mpf_encoder.c  mpf_engine.c  mpf_engine_factory.c  mpf_file_termination_factory.c  mpf_frame_buffer.c  mpf_jitter_buffer.c  mpf_mixer.c  mpf_multiplier.c  mpf_named_event.c  mpf_resampler.c  mpf_rtcp_scheduler.c  mpf_rtp_attribs.c  mpf_rtp_stream.c  mpf_rtp_termination_factory.c  mpf_scheduler.c  mpf_stream.c  mpf_termination.c  mpf_termination_factory.c  mpf_timer.c  mpf_timer_manager.c
libs/mrcp/: Makefile.am  mrcp.vcproj  mrcp.vcxproj  mrcp.vcxproj.filters
libs/mrcp-engine/: Makefile.am  mrcpengine.vcproj  mrcpengine.vcxproj  mrcpengine.vcxproj.filters
libs/mrcp-engine/include/: mrcp_engine_factory.h  mrcp_engine_iface.h  mrcp_engine_impl.h  mrcp_engine_loader.h  mrcp_engine_plugin.h  mrcp_engine_types.h  mrcp_recog_engine.h  mrcp_recog_state_machine.h  mrcp_recorder_engine.h  mrcp_recorder_state_machine.h  mrcp_resource_engine.h  mrcp_resource_plugin.h  mrcp_state_machine.h  mrcp_synth_engine.h  mrcp_synth_state_machine.h  mrcp_verifier_engine.h  mrcp_verifier_state_machine.h
libs/mrcp-engine/src/: mrcp_engine_factory.c  mrcp_engine_iface.c  mrcp_engine_impl.c  mrcp_engine_loader.c  mrcp_recog_state_machine.c  mrcp_recorder_state_machine.c  mrcp_resource_engine.c  mrcp_synth_state_machine.c  mrcp_verifier_state_machine.c
libs/mrcp/include/: mrcp.h  mrcp_types.h
libs/mrcpv2-transport/: Makefile.am  mrcpv2transport.vcproj  mrcpv2transport.vcxproj  mrcpv2transport.vcxproj.filters
libs/mrcpv2-transport/include/: mrcp_ca_factory.h  mrcp_client_connection.h  mrcp_connection.h  mrcp_connection_descriptor.h  mrcp_connection_types.h  mrcp_control_descriptor.h  mrcp_server_connection.h  mrcpv2_connection_descriptor.h  mrcpv2_server_agent.h
libs/mrcpv2-transport/src/: mrcp_ca_factory.c  mrcp_client_connection.c  mrcp_connection.c  mrcp_connection_descriptor.c  mrcp_control_descriptor.c  mrcp_server_connection.c  mrcpv2_client_agent.c  mrcpv2_connection_descriptor.c  mrcpv2_server_agent.c
libs/uni-rtsp/: Makefile.am  unirtsp.vcproj  unirtsp.vcxproj  unirtsp.vcxproj.filters
libs/uni-rtsp/include/: rtsp.h  rtsp_client.h  rtsp_client_connection.h  rtsp_header.h  rtsp_message.h  rtsp_server.h  rtsp_server_connection.h  rtsp_start_line.h  rtsp_stream.h
libs/uni-rtsp/src/: rtsp_client.c  rtsp_client_connection.c  rtsp_header.c  rtsp_message.c  rtsp_server.c  rtsp_server_connection.c  rtsp_start_line.c  rtsp_stream.c
modules/mrcp-unirtsp/: Makefile.am  mrcpunirtsp.vcproj  mrcpunirtsp.vcxproj  mrcpunirtsp.vcxproj.filters
modules/mrcp-unirtsp/include/: mrcp_unirtsp_client_agent.h  mrcp_unirtsp_sdp.h  mrcp_unirtsp_server_agent.h
modules/mrcp-unirtsp/src/: mrcp_unirtsp_client_agent.c  mrcp_unirtsp_sdp.c  mrcp_unirtsp_server_agent.c
plugins/demo-synth/: Makefile.am  demosynth.vcproj  demosynth.vcxproj  demosynth.vcxproj.filters
plugins/demo-synth/include/: demo_synth_engine.h
plugins/demo-synth/src/: demo_synth_engine.c
plugins/mrcp-flite/: Makefile.am  mrcpflite.vcproj  mrcpflite.vcxproj  mrcpflite.vcxproj.filters
plugins/mrcp-flite/include/: flite_voices.h
plugins/mrcp-flite/src/: flite_voices.c  mrcp_flite.c
plugins/mrcp-pocketsphinx/: Makefile.am  mrcppocketsphinx.vcproj  mrcppocketsphinx.vcxproj  mrcppocketsphinx.vcxproj.filters
plugins/mrcp-pocketsphinx/conf/: pocketsphinx.xml
(+203 files in other folders)
